--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<meta name="viewport" content="width=device-width" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons&display=swap"
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500|Material+Icons&display=swap"
 		rel="stylesheet" />
 	%sveltekit.head%
 </head>
